# nf_hist

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: doc-generator.yml
doc/: antora-playbook.yml  antora.yml  mrdocs.yml
doc/modules/ROOT/: nav.adoc
doc/modules/ROOT/pages/: examples.adoc  index.adoc  quick-start.adoc
doc/modules/ROOT/pages/design-docs/: 1-event-action-formats.adoc  2-op-formats.adoc  3-user-data-format.adoc  4-change-notification-ordering.adoc  5-paths-keys-operate-on.adoc  6-reflective-class-generation-adoc  index.adoc
doc/modules/ROOT/pages/maintainer-docs/: index.adoc  roadmap.adoc
doc/modules/ROOT/pages/user-guide/: 1-introduction.adoc  10-manual-optimizations.adoc  2-tracked-types.adoc  3-actions-events-ops.adoc  4-history-undo-redo.adoc  5-edit-sub-elements.adoc  6-notifications.adoc  7-selections.adoc  8-attached-data.adoc  9-action-user-data.adoc  index.adoc
doc/modules/api/: nav.adoc
doc/modules/api/pages/: index.adoc  nf.adoc  nf_hist.adoc  reference.tag.xml
doc/modules/api/pages/nf/: action_status.adoc  attach_data.adoc  editor.adoc  index_size.adoc  make_path.adoc  make_tracked.adoc  rendered_action.adoc  simple_tracked.adoc  tracked.adoc  tracked_element.adoc
doc/modules/api/pages/nf_hist/: action_status.adoc  attach_data.adoc  editor.adoc  index_size.adoc  make_path.adoc  make_tracked.adoc  rendered_action.adoc  simple_tracked-026.adoc  simple_tracked-02b.adoc  tracked-0d.adoc  tracked-0e.adoc  (+1 more)
doc/supplemental-ui/partials/: header-content.hbs
examples/: 01_read_example.cpp  02_write_example.cpp  03_action_example.cpp  04_default_init.cpp  05_untracked_init.cpp  06_tracked_init.cpp  07_undo_redo.cpp  08_redo_elision.cpp  09_edit_sub_elements.cpp  10_using_selections.cpp  11_change_notification_paths.cpp  12_all_change_notifications.cpp  13_attach_data.cpp  14_user_defined_action_data.cpp  15_render_actions.cpp  16_create_action_labels.cpp  17_optimize_history_size.cpp  18_cap_history_size.cpp  live_examples.txt  main.cpp
include/: README.md
tools/: generate-docs.bat  generate-html.bat
(+59 files in other folders)
